fix: fix footer spacing

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,8 +1,8 @@
 *::-webkit-scrollbar {
-  width: 6px;
+  width: 8px;
 }
 *::-webkit-scrollbar-track {
-  width: 6px;
+  width: 8px;
 }
 *::-webkit-scrollbar-thumb {
   background-color: black;
